--- a/index.html
+++ b/index.html
@@ -42,5 +42,21 @@
 <body onload = "getFact()">
 	<h1>Chuck Norris Facts</h1>
 	<div id = "data"></div>
+	</br>
+	</br>
+	<p> 
+	API: Chuck Norris API </br> </br>
+	API FUNCTION: get hand curated random Chuck Norris Facts </br></br>
+	WEBSITE CITATION: https://rapidapi.com/matchilling/api/chuck-norris </br></br>
+	API OPTIONS: Icon_url, id, url, value </br></br>
+	TWO APPLICATIONS WHERE THIS API COULD BE HELPFUL: </br>
+	This API could be helpful for an internet meme page, </br>
+	or for someone who is a big fan of Chuck Norris and </br>
+	wants random facts about him. There is also the idea </br>
+	to develop an app that gives you a random Chuck Norris </br>
+	fact each day. This could resemble the apps that give </br>
+	you a new word from the dictionary every day, or a </br>
+	positive quote each morning. </br>
+	</p>
 </body>
 </html>
